added:lib doctor and laboratory crud
