# app/Models/lib_doctor.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class lib_doctor extends Model
+{
+    //
+
+    protected $table = 'lib_doctor';
+
+
+    protected $fillable = [
+        'doctor_amount',
+    ];
+}
